--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -13,11 +13,13 @@
         android:text="Artistas favoritos"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:textColor="#FFFF"/>
+        android:textColor="#FFFF"
+        android:paddingTop="20dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragmentRecycleFavoritos"/>
+        android:id="@+id/fragmentRecycleFavoritos"
+        android:paddingTop="20dp"/>
 
 </LinearLayout>
