--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".view.MainActivity"
     android:background="#000"
     android:orientation="vertical">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -24,5 +32,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/activityMainContenedorFragmenRecomendados"/>
 
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
 
