Bottom NavView + ShearchView
3 Botones + accion de boton buscar hacia 2da avitidad

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainActivity"
     android:background="#000"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".view.MainActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/activityMainContenedorFragmenFavoritos"/>
+            <FrameLayout
+                android:id="@+id/activityMainContenedorFragmenFavoritos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/activityMainContenedorFragmenPlaylist"/>
+            <FrameLayout
+                android:id="@+id/activityMainContenedorFragmenPlaylist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/activityMainContenedorFragmenRecomendados"/>
+            <FrameLayout
+                android:id="@+id/activityMainContenedorFragmenRecomendados"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
+
     </androidx.core.widget.NestedScrollView>
-</LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/activityMainBottomNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#272525"
+        android:layout_marginTop="560dp"
+        app:menu="@menu/menubajo"
+        app:itemIconTint="#EAEAEA"
+        app:itemTextColor="#EAEAEA"/>
+
+
+</RelativeLayout>
 
