--- a/app/src/main/res/layout/fragment_listado_canciones.xml
+++ b/app/src/main/res/layout/fragment_listado_canciones.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.FragmentListadoCanciones"
-
-    android:orientation="vertical">
+    android:background="#000000"
+    android:orientation="vertical"
+    tools:context=".view.FragmentListadoCanciones">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -13,49 +13,62 @@
         android:layout_gravity="center">
 
         <ImageView
+            android:id="@+id/fragmentlistadoCancionesImagen"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:scaleType="centerCrop"
-            android:id="@+id/fragmentlistadoCancionesImagen"
             android:src="@drawable/vulfpeck1" />
 
         <View
             android:layout_width="wrap_content"
             android:layout_height="300dp"
-            android:background="#9EFB0808"/>
+            android:background="#9EFB0808" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:text="Vulfpeck"
-        android:textSize="20dp"
-        android:textAlignment="center"
-        android:id="@+id/fragmentListadoCancionesArtista"
-        android:textColor="#FFFF"
-        android:layout_gravity="center"/>
+            android:gravity="center"
+            android:orientation="vertical">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mas escuchados"
-        android:textSize="30dp"
-        android:textAlignment="center"
-        android:id="@+id/albumArtistaTextView"
-        android:textColor="#FFFF"
-        android:layout_gravity="center"/>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/fragmentListadoCancionesArtista"
+                android:layout_width="200dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:text="Vulfpeck"
+                android:textAlignment="center"
+                android:textColor="#FFFF"
+                android:textSize="20dp" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/albumArtistaTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Mas escuchados"
+                android:textAlignment="center"
+                android:textColor="#FFFF"
+                android:textSize="30dp" />
+
+            <Button
+                android:id="@+id/botonaleatorio"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="160dp"
+                android:background="@drawable/botonaleatorio"
+                android:padding="15dp"
+                android:text="Aleatoria">
+
+            </Button>
+
         </LinearLayout>
 
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragmentListadoCancionesRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/fragmentListadoCancionesRecycler"
-        android:paddingTop="20dp"/>
+        android:paddingTop="20dp" />
 
 </LinearLayout>
