--- a/app/src/main/res/layout/fragment_playlist_fragment.xml
+++ b/app/src/main/res/layout/fragment_playlist_fragment.xml
@@ -4,17 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.playlist_fragment">
+    tools:context=".view.PlaylistFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Tus playlist"
+        android:text="Tus playlists"
         android:textSize="20dp"
         android:textStyle="bold"
         android:textColor="#FFFF"
-        android:paddingTop="20dp"/>
+        android:paddingTop="20dp"
+        android:layout_marginLeft="10dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
