--- a/app/src/main/res/layout/fragment_recomendados.xml
+++ b/app/src/main/res/layout/fragment_recomendados.xml
@@ -14,7 +14,8 @@
         android:textSize="20dp"
         android:textStyle="bold"
         android:textColor="#FFFF"
-        android:paddingTop="20dp"/>
+        android:paddingTop="20dp"
+        android:layout_marginLeft="10dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
