--- a/app/src/main/res/menu/menubuscador.xml
+++ b/app/src/main/res/menu/menubuscador.xml
@@ -5,12 +5,11 @@
     tools:context=".view.Main2ActivityActivity">
 
     <item
-        android:id="@+id/buscador"
+        android:id="@+id/toolbarBuscador"
         android:title="Buscar"
         android:icon="@drawable/ic_search_black_24dp"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always"
-        android:hint="Buscar artistas, canciones o podcasts"
         android:textColor="#FFF"/>
 
 </menu>
