--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -3,12 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.BottomNavigationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentBottomNavigation"
+        app:menu="@menu/menubajo"
+        app:itemTextColor="#FFFF"
+        app:itemIconTint="#FFFF"
+        android:layout_gravity="bottom"/>
 
 </FrameLayout>
