--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".view.FavoritosFragment"
+    tools:context=".view.fragment.FavoritosFragment"
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
