--- a/app/src/main/res/layout/fragment_playlist_fragment.xml
+++ b/app/src/main/res/layout/fragment_playlist_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.PlaylistFragment">
+    tools:context=".view.fragment.PlaylistFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
