Los tres fragments del inicio ahora son uno solo FragmentPrincipalPrueba

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,12 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="60dp"
             android:orientation="vertical">
-
             <FrameLayout
+                android:id="@+id/activityMainContenedorPrincipalPrueba"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+         <!--   <FrameLayout
                 android:id="@+id/activityMainContenedorFragmenFavoritos"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -35,7 +39,7 @@
             <FrameLayout
                 android:id="@+id/activityMainContenedorFragmenRecomendados"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" />-->
 
         </LinearLayout>
 
