--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,8 +12,10 @@
 
     <ImageView
         android:id="@+id/activityLoginImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="50dp"
+        android:src="@drawable/jaxoologin"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/loginActivityTextInputLayoutEmail"
