--- a/app/src/main/res/layout/track_celda.xml
+++ b/app/src/main/res/layout/track_celda.xml
@@ -7,15 +7,32 @@
     android:gravity="center">
 
 
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/celdaNombreCancion"
         android:layout_width="350dp"
         android:layout_height="match_parent"
         android:text="Nombre Cancion"
-        android:textSize="20dp"
+        android:textSize="15dp"
 
         android:textColor="#F1EEEE"/>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/celdaAlbumCancion"
+        android:layout_width="350dp"
+        android:layout_height="match_parent"
+
+        android:textSize="12dp"
+
+        android:textColor="#F1EEEE"/>
+
+
+
+</LinearLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
