--- a/app/src/main/res/layout/fragment_playlist_tracks.xml
+++ b/app/src/main/res/layout/fragment_playlist_tracks.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
 
     android:orientation="vertical"
-    tools:context=".view.fragment.FragmentListadoCanciones">
+    tools:context=".view.fragment.FragmentAlbumTracks">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -13,7 +13,7 @@
         android:layout_gravity="center">
 
         <ImageView
-            android:id="@+id/fragmentlistadoCancionesImagen"
+            android:id="@+id/fragmentPlaylistImagen"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:scaleType="centerCrop"
@@ -22,7 +22,7 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="300dp"
-            android:background="#9EFB0808" />
+            android:background="#4DFB0808" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +31,7 @@
             android:orientation="vertical">
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/fragmentListadoCancionesArtista"
+                android:id="@+id/fragmentPlaylistNombre"
                 android:layout_width="200dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -41,7 +41,7 @@
                 android:textSize="20dp" />
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/albumArtistaTextView"
+                android:id="@+id/fragmentPlaylistTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -51,7 +51,7 @@
                 android:textSize="30dp" />
 
             <Button
-                android:id="@+id/botonaleatorio"
+                android:id="@+id/botonAleatorioPlaylist"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="160dp"
@@ -66,7 +66,7 @@
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fragmentListadoCancionesRecycler"
+        android:id="@+id/fragmentPlaylistRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="20dp" />
