--- a/app/src/main/res/layout/fragment_album_tracks.xml
+++ b/app/src/main/res/layout/fragment_album_tracks.xml
@@ -3,65 +3,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:orientation="vertical"
-    tools:context=".view.fragment.FragmentAlbumTracks">
+    tools:context=".view.fragment.FragmentAlbumTracks"
+    android:background="@drawable/gradient_background">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/fragmentlistadoCancionesImagen"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/vulfpeck1" />
-
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
-            android:background="#4DFB0808" />
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+             app:cardCornerRadius="40dp"
+            android:elevation="10dp"
+
+            android:layout_margin="70dp">
+        <ImageView
+            android:id="@+id/fragmentlistadoCancionesImagen"
+            android:layout_width="wrap_content"
+            android:layout_height="300dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/vulfpeck1"/>
+
+
+        </com.google.android.material.card.MaterialCardView>
+        </FrameLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="center"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/fragmentListadoCancionesArtista"
-                android:layout_width="200dp"
-                android:layout_height="30dp"
+                android:layout_width="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                app:layout_constraintTop_toTopOf="parent"
                 android:text="Vulfpeck"
                 android:textAlignment="center"
                 android:textColor="#FFFF"
-                android:textSize="20dp" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/albumArtistaTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Mas escuchados"
-                android:textAlignment="center"
-                android:textColor="#FFFF"
                 android:textSize="30dp" />
+
+
 
             <Button
                 android:id="@+id/botonaleatorio"
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="160dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 android:background="@drawable/botonaleatorio"
                 android:padding="15dp"
-                android:text="Aleatoria">
+                android:text="Aleatoria"
+
+                app:layout_constraintBottom_toBottomOf="parent" >
 
             </Button>
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </FrameLayout>
 
@@ -69,6 +91,11 @@
         android:id="@+id/fragmentListadoCancionesRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp" />
+        android:paddingTop="30dp" />
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
 
 </LinearLayout>
