--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -4,13 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.fragment.BottomNavigationFragment">
+    tools:context=".view.fragment.BottomNavigationFragment"
+>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragmentBottomNavigation"
         app:menu="@menu/menubajo"
+        android:background="#000"
         app:itemTextColor="#FFFF"
         app:itemIconTint="#FFFF"
         android:layout_gravity="bottom"/>
