--- a/app/src/main/res/layout/fragment_playlist_tracks.xml
+++ b/app/src/main/res/layout/fragment_playlist_tracks.xml
@@ -1,74 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+    android:background="@drawable/gradient_background"
     android:orientation="vertical"
     tools:context=".view.fragment.FragmentAlbumTracks">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/fragmentPlaylistImagen"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/vulfpeck1" />
-
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
-            android:background="#4DFB0808" />
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:orientation="vertical">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/fragmentPlaylistNombre"
-                android:layout_width="200dp"
-                android:layout_height="30dp"
-                android:layout_gravity="center"
-                android:text="Vulfpeck"
-                android:textAlignment="center"
-                android:textColor="#FFFF"
-                android:textSize="20dp" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/fragmentPlaylistTextView"
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Mas escuchados"
-                android:textAlignment="center"
-                android:textColor="#FFFF"
-                android:textSize="30dp" />
+                android:layout_gravity="center">
 
-            <Button
-                android:id="@+id/botonAleatorioPlaylist"
-                android:layout_width="160dp"
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="70dp"
+                        android:elevation="10dp"
+
+                        app:cardCornerRadius="40dp">
+
+                        <ImageView
+                            android:id="@+id/fragmentPlaylistImagen"
+                            android:layout_width="match_parent"
+                            android:layout_height="300dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/vulfpeck1" />
+
+                    </com.google.android.material.card.MaterialCardView>
+                </FrameLayout>
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/fragmentPlaylistNombre"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:text="Vulfpeck"
+                        android:textAlignment="center"
+                        android:textColor="#FFFF"
+                        android:textSize="30dp"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+
+
+                    <Button
+                        android:id="@+id/botonAleatorioPlaylist"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="300dp"
+                        android:background="@drawable/botonaleatorio"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:padding="15dp"
+                        app:layout_constraintRight_toRightOf="parent"
+
+                        android:text="Aleatoria">
+
+                    </Button>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </FrameLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/fragmentPlaylistRecycler"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="160dp"
-                android:background="@drawable/botonaleatorio"
-                android:padding="15dp"
-                android:text="Aleatoria">
-
-            </Button>
+                android:paddingTop="20dp" />
 
         </LinearLayout>
-
-    </FrameLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fragmentPlaylistRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp" />
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
