--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment.FragmentSearch">
+    tools:context=".view.fragment.FragmentSearch"
+    android:background="@drawable/gradient_background">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragmentListadoSearch"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="20dp" />
+        android:paddingTop="30dp" />
 
 
 </LinearLayout>
