--- a/app/src/main/res/layout/track_celda.xml
+++ b/app/src/main/res/layout/track_celda.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:orientation="horizontal"
-    android:background="#000"
+    android:background="#00000000"
     android:gravity="center">
 
 
