--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -4,8 +4,10 @@
 
     <gradient
         android:startColor="#000"
-        android:endColor="#85B11313"
-        android:angle="90"></gradient>
+        android:endColor="#6E1717"
+        android:angle="90">
+
+    </gradient>
 
 
 </shape>
