--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,7 @@
             <ScrollView
                 android:id="@+id/scrollView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="10dp">
+                android:layout_height="match_parent">
 
 
                 <FrameLayout
@@ -38,6 +37,7 @@
             </ScrollView>
 
         </LinearLayout>
+
 
         <FrameLayout
             android:id="@+id/activityMainContenedorFragmentBottomNavigation"
