--- a/app/src/main/res/layout/fragment_detalle_cancion.xml
+++ b/app/src/main/res/layout/fragment_detalle_cancion.xml
@@ -3,12 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragment.FragmentDetalleCancion">
+    tools:context=".view.fragment.FragmentDetalleCancion"
+    android:background="@drawable/gradient_background">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+
+     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/vulfpeck">
+
+    </ImageView>
 
 </FrameLayout>
