--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -17,7 +17,7 @@ android:orientation="vertical">
     android:textStyle="bold"
     android:textColor="#FFFF"
     android:paddingTop="20dp"
-    android:layout_marginLeft="10dp"/>
+    android:paddingLeft="10dp"/>
 
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
@@ -34,7 +34,7 @@ android:orientation="vertical">
         android:textStyle="bold"
         android:textColor="#FFFF"
         android:paddingTop="20dp"
-        android:layout_marginLeft="10dp"/>
+        android:paddingLeft="10dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
@@ -50,7 +50,7 @@ android:orientation="vertical">
         android:textStyle="bold"
         android:textColor="#FFFF"
         android:paddingTop="20dp"
-        android:layout_marginLeft="10dp"/>
+        android:paddingLeft="10dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
