--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
-android:layout_height="wrap_content"
+android:layout_height="match_parent"
 tools:context=".view.fragment.FragmentPrincipal"
 android:orientation="vertical">
 
-<!-- TODO: Update blank fragment layout -->
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -58,6 +63,6 @@ android:orientation="vertical">
         android:id="@+id/fragmentRecycleRecomendados"
         android:paddingTop="20dp"/>
 
-
-
 </LinearLayout>
+
+</ScrollView>
