--- a/app/src/main/res/layout/fragment_tu_biblioteca.xml
+++ b/app/src/main/res/layout/fragment_tu_biblioteca.xml
@@ -14,7 +14,7 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/fragmentTuBibliotecaViewPager"
         android:layout_width="match_parent"
-        android:layout_height="700dp" />
+        android:layout_height="match_parent" />
 
 
 
