--- a/app/src/main/res/layout/fragment_playlist_tracks.xml
+++ b/app/src/main/res/layout/fragment_playlist_tracks.xml
@@ -67,7 +67,16 @@
                         android:textSize="30dp"
                         app:layout_constraintTop_toTopOf="parent"/>
 
-
+                    <ImageButton
+                        android:id="@+id/playlistBotonFavoritos"
+                        android:layout_width="40dp"
+                        android:layout_height="60dp"
+                        android:background="#00FFFFFF"
+                        android:src="@drawable/ic_favorite_border"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintLeft_toRightOf="@+id/botonAleatorioPlaylist"
+                        />
 
                     <Button
                         android:id="@+id/botonAleatorioPlaylist"
