--- a/app/src/main/res/layout/fragment_reproductor.xml
+++ b/app/src/main/res/layout/fragment_reproductor.xml
@@ -13,8 +13,7 @@
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        >
+        android:layout_weight="1">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -52,26 +51,30 @@
                 android:id="@+id/fragmentReproductorNombreArtista"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:text="Artista"
                 android:textAlignment="center"
                 android:textColor="#FFFF"
-
                 android:textSize="30dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+
+
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/fragmentReproductorNombreTrack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="NombreTrack"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 android:textAlignment="center"
                 android:textColor="#FFFF"
                 android:textSize="40dp"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+
+                app:layout_constraintRight_toRightOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -83,14 +86,36 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
         <ImageView
             android:id="@+id/fragmentReproductorPlayPause"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="#00FAF6F6"
             android:src="@drawable/ic_play_circle_filled" />
+
+
+    <ImageButton
+        android:id="@+id/reproductorFavoritos"
+        android:layout_width="40dp"
+        android:layout_height="70dp"
+        android:background="#00FFFFFF"
+        android:src="@drawable/ic_favorite_border"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/fragmentReproductorPlayPause"
+
+        app:layout_constraintRight_toRightOf="parent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
