--- a/app/src/main/res/layout/fragment_tu_biblioteca.xml
+++ b/app/src/main/res/layout/fragment_tu_biblioteca.xml
@@ -5,16 +5,26 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".view.fragment.biblioteca.FragmentTuBiblioteca">
+    tools:context=".view.fragment.biblioteca.FragmentTuBiblioteca"
+    android:background="@drawable/gradient_background">
 
+<com.google.android.material.textview.MaterialTextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textAlignment="center"
+    android:textSize="40dp"
+    android:textColor="#FFF"
+    android:text="Tu biblioteca">
 
+</com.google.android.material.textview.MaterialTextView>
 
 
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/fragmentTuBibliotecaViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"/>
 
 
 
