--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,5 +9,10 @@
         <item name="android:textColorHint">@color/cardview_light_background</item>
     </style>
 
+    <style name="AppTheme.TemaPopUp">
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        </style>
 
 </resources>
